--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx-proxy:
     image: nginxproxy/nginx-proxy:latest
@@ -16,7 +14,7 @@ services:
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     networks:
-      - glpi-net
+      - app-network
       - proxy-network
     restart: unless-stopped
     logging:
@@ -40,7 +38,7 @@ services:
     depends_on:
       - nginx-proxy
     networks:
-      - glpi-net
+      - app-network
       - proxy-network
     restart: unless-stopped
     logging:
@@ -50,7 +48,8 @@ services:
         max-file: "3"
 
 networks:
-  glpi-net:
+  app-network:
+    name: ${DOCKER_NETWORK:-glpi-net}
     external: true
   proxy-network:
     driver: bridge
