fix: Update custom Nginx configuration to prevent conflicts with generated vhost settings

--- a/applications/nginx-proxy/custom-nginx.conf
+++ b/applications/nginx-proxy/custom-nginx.conf
@@ -15,10 +15,11 @@ proxy_send_timeout 600s;
 proxy_read_timeout 600s;
 send_timeout 600s;
 
-# WebSocket support (required for Chatwoot and n8n)
-proxy_http_version 1.1;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
+# NOTE:
+# WebSocket / proxy headers are normally added per-vhost by nginx-proxy.
+# Avoid duplicating `proxy_http_version` / `proxy_set_header` here because
+# that can conflict with generated vhost config and prevent nginx from reloading.
+
 
 # Security headers
 add_header X-Frame-Options "SAMEORIGIN" always;
@@ -30,4 +31,4 @@ gzip on;
 gzip_vary on;
 gzip_proxied any;
 gzip_comp_level 6;
-gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
+/* Do not redefine gzip_types here to avoid duplicates with generated config. */
