feat: Enhance nginx-proxy setup with automated scripts and improved documentation
- Updated README.md to include automated setup options and detailed service configuration steps.
- Added CHEATSHEET.md for quick reference on installation, service configuration, and troubleshooting.
- Modified install.sh to support non-interactive mode and improved error handling.
- Enhanced setup-subdomain.sh for better user experience and added backend URL configuration.
- Updated docker-compose.yml to include ACME_CA_URI environment variable.

--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     environment:
       - DEFAULT_EMAIL=${LETSENCRYPT_EMAIL}
       - NGINX_PROXY_CONTAINER=nginx-proxy
+      - ACME_CA_URI=${ACME_CA_URI:-}
     depends_on:
       - nginx-proxy
     networks:
