feat: Update installation script and documentation for improved automation and user guidance

--- a/applications/nginx-proxy/custom-nginx.conf
+++ b/applications/nginx-proxy/custom-nginx.conf
@@ -31,4 +31,4 @@ gzip on;
 gzip_vary on;
 gzip_proxied any;
 gzip_comp_level 6;
-/* Do not redefine gzip_types here to avoid duplicates with generated config. */
+# Do not redefine gzip_types here to avoid duplicates with generated config.
