--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -10,13 +10,11 @@ services:
       - nginx-certs:/etc/nginx/certs
       - nginx-vhost:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
-      - ./custom-nginx.conf:/etc/nginx/conf.d/custom.conf:ro
       - ./vhost-configs:/etc/nginx/vhost.d:rw
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
     networks:
-      - app-network
-      - proxy-network
+      - nginx-proxy_proxy-network
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -40,8 +38,7 @@ services:
     depends_on:
       - nginx-proxy
     networks:
-      - app-network
-      - proxy-network
+      - nginx-proxy_proxy-network
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -50,10 +47,7 @@ services:
         max-file: "3"
 
 networks:
-  app-network:
-    name: ${DOCKER_NETWORK:-glpi-net}
-    external: true
-  proxy-network:
+  nginx-proxy_proxy-network:
     driver: bridge
 
 volumes:
