--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   nginx-proxy:
     image: nginxproxy/nginx-proxy:latest
@@ -10,18 +12,26 @@ services:
       - nginx-certs:/etc/nginx/certs
       - nginx-vhost:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
+      - ../nginx-proxy/custom-nginx.conf:/etc/nginx/conf.d/custom-nginx.conf:ro
     environment:
       - TRUST_DOWNSTREAM_PROXY=false
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
     networks:
       - proxy-network
+      - external-services
     restart: unless-stopped
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
   acme-companion:
     image: nginxproxy/acme-companion:latest
@@ -38,9 +48,11 @@ services:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-proxy
       - ACME_CA_URI=${ACME_CA_URI:-}
     depends_on:
-      - nginx-proxy
+      nginx-proxy:
+        condition: service_healthy
     networks:
       - proxy-network
+      - external-services
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -51,9 +63,17 @@ services:
 networks:
   proxy-network:
     driver: bridge
+    name: nginx-proxy_proxy-network
+  external-services:
+    name: ${DOCKER_NETWORK:-n8n-net}
+    external: true
 
 volumes:
   nginx-certs:
+    driver: local
   nginx-vhost:
+    driver: local
   nginx-html:
+    driver: local
   acme-state:
+    driver: local
