--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx-proxy:
     image: nginxproxy/nginx-proxy:latest
@@ -26,12 +24,6 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
 
   acme-companion:
     image: nginxproxy/acme-companion:latest
@@ -48,8 +40,7 @@ services:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-proxy
       - ACME_CA_URI=${ACME_CA_URI:-}
     depends_on:
-      nginx-proxy:
-        condition: service_healthy
+      - nginx-proxy
     networks:
       - proxy-network
       - external-services
