--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - nginx-certs:/etc/nginx/certs
       - nginx-vhost:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
-      - ../nginx-proxy/custom-nginx.conf:/etc/nginx/conf.d/custom-nginx.conf:ro
+      - ./custom-nginx.conf:/etc/nginx/conf.d/custom-nginx.conf:ro
     environment:
       - TRUST_DOWNSTREAM_PROXY=false
     labels:
