--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -17,6 +17,12 @@ services:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
     networks:
       - proxy-network
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -39,7 +45,8 @@ services:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-proxy
       - ACME_CA_URI=${ACME_CA_URI:-}
     depends_on:
-      - nginx-proxy
+      nginx-proxy:
+        condition: service_healthy
     networks:
       - proxy-network
     restart: unless-stopped
