--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -18,12 +18,12 @@ services:
     networks:
       - proxy-network
     healthcheck:
-      test: ["CMD", "nginx", "-t"]
+      test: ["CMD", "curl", "--fail", "http://localhost/"]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 10s
-    restart: unless-stopped
+    restart: always
     logging:
       driver: "json-file"
       options:
@@ -49,7 +49,7 @@ services:
         condition: service_healthy
     networks:
       - proxy-network
-    restart: unless-stopped
+    restart: always
     logging:
       driver: "json-file"
       options:
