--- a/applications/nginx-proxy/docker-compose.yml
+++ b/applications/nginx-proxy/docker-compose.yml
@@ -18,11 +18,7 @@ services:
     networks:
       - proxy-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -fsS http://127.0.0.1/ || exit 1"]
-      interval: 15s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
+      disable: true
     restart: always
     logging:
       driver: "json-file"
