fix: Update .env for Chatwoot configuration and add fix-database script

--- a/applications/chatwoot/.env
+++ b/applications/chatwoot/.env
@@ -15,7 +15,14 @@ ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT=
 #   FRONTEND_URL=http://192.168.1.42:3000
 # For public/production use HTTPS and your domain:
 #   FRONTEND_URL=https://chat.yourdomain.com
-FRONTEND_URL=http://<SERVER_IP>:3000
+FRONTEND_URL=https://chatwoot.tasuthor.com
+FORCE_SSL=true
+
+# nginx-proxy configuration
+VIRTUAL_HOST=chatwoot.tasuthor.com
+VIRTUAL_PORT=3000
+LETSENCRYPT_HOST=chatwoot.tasuthor.com
+LETSENCRYPT_EMAIL=tasuthiro.davide@gmail.com
 
 # Default locale
 DEFAULT_LOCALE=en
@@ -28,10 +35,12 @@ REDIS_URL=redis://redis:6379
 REDIS_PASSWORD=secure_redis_password_123
 
 # PostgreSQL configuration (containerized)
-POSTGRES_HOST=postgres
+POSTGRES_HOST=chatwoot-postgres-1
+POSTGRES_USER=postgres
 POSTGRES_USERNAME=postgres
+PGUSER=postgres
 POSTGRES_PASSWORD=secure_postgres_password_456
-POSTGRES_DATABASE=chatwoot_production
+POSTGRES_DB=chatwoot
 
 # Email configuration - configure SMTP or use Postfix
 MAILER_SENDER_EMAIL=Chatwoot <noreply@yourdomain.com>
