--- a/applications/chatwoot/.env
+++ b/applications/chatwoot/.env
@@ -15,14 +15,7 @@ ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT=
 #   FRONTEND_URL=http://192.168.1.42:3000
 # For public/production use HTTPS and your domain:
 #   FRONTEND_URL=https://chat.yourdomain.com
-FRONTEND_URL=https://chatwoot.tasuthor.com
-FORCE_SSL=true
-
-# nginx-proxy configuration
-VIRTUAL_HOST=chatwoot.tasuthor.com
-VIRTUAL_PORT=3000
-LETSENCRYPT_HOST=chatwoot.tasuthor.com
-LETSENCRYPT_EMAIL=tasuthiro.davide@gmail.com
+FRONTEND_URL=http://<SERVER_IP>:3000
 
 # Default locale
 DEFAULT_LOCALE=en
