--- a/applications/chatwoot/docker-compose.yaml
+++ b/applications/chatwoot/docker-compose.yaml
@@ -63,6 +63,11 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      # ⚠️ CRITICO: Disabilita VIRTUAL_HOST per postgres!
+      - VIRTUAL_HOST=
+      - VIRTUAL_PORT=
+      - LETSENCRYPT_HOST=
     # Commenta le porte per non esporle pubblicamente in produzione
     # ports:
     #   - '5432:5432'
@@ -74,6 +79,11 @@ services:
     restart: always
     command: ["sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\""]
     env_file: .env
+    environment:
+      # ⚠️ CRITICO: Disabilita VIRTUAL_HOST per redis!
+      - VIRTUAL_HOST=
+      - VIRTUAL_PORT=
+      - LETSENCRYPT_HOST=
     volumes:
       - redis_data:/data
     # Commenta le porte per non esporle pubblicamente in produzione
